force-app/main/default/objects/Pokemon_Biome__mdt/Pokemon_Biome__mdt.object-meta.xml
<CustomObject>
    <label>Pokemon Biome</label>
    <pluralLabel>Pokemon Biomes</pluralLabel>
</CustomObject>