force-app/main/default/objects/Pokemon_Biome__mdt/fields/Background_Image_Url__c.field-meta.xml
<CustomField>
    <fullName>Background_Image_Url__c</fullName>
    <label>Background Image Url</label>
    <type>Url</type>
</CustomField>