force-app/main/default/objects/Pokemon_Biome__mdt/fields/Encounters_Json__c.field-meta.xml
<CustomField>
    <fullName>Encounters_Json__c</fullName>
    <label>Encounters Json</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>