force-app/main/default/objects/Pokemon_Biome__mdt/fields/Grass_Patch_Count__c.field-meta.xml
<CustomField>
    <fullName>Grass_Patch_Count__c</fullName>
    <label>Grass Patch Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>